--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -363,3 +363,21 @@ Go to Dun Morhen and slay 4 Bulette.
 Camp on the ship for a long rest
 
 ++++Session 25
+Edan drains 1 ravens and 3 CON from Kerri - DEAD
+-takes another Raven down 2
+-Ravens can be drained 4 CON until dead
+ 
+Encountered and defeated 20 dire wolves
+
+head over to the elven ruin and investigate the ruins 
+-corpses looted
+-4 hour rest is done
+
+group hunted down some more bulettes
+-yvelda dies
+-thia die
+
+Kreiger polymorphed into a T-rex triggering some God Fruit to manifest
+-slew a group of 7 bullettes
+
+The group rests at the elven ruin again for the night
