adding more notes

--- a/OneWiki/data/Dun Morhen.wiki
+++ b/OneWiki/data/Dun Morhen.wiki
@@ -39,7 +39,7 @@ EVIL GROUP NOTE:
     Grund-Intense burns and charred flesh
         -Great Axe
     Ferionia Vie-stabbed in the abdomen in a bush
-        -7th level Spell that can contain dark waters 
+        -7th level Spell that can contain dark waters [Items of Importance]
         -Quarter Staff
     Nifle Vanhivener
         -Quarter Staff    
