--- a/OneWiki/data/Items of Importance.wiki
+++ b/OneWiki/data/Items of Importance.wiki
@@ -6,3 +6,11 @@ Sending Stones Instructions
     -Written in Undercommon
     -Item Value: 500
     -Backstory: used by underground mages to communicate, Henry was likely a failed attempt at crafting them.
+Spell Scroll of Dark Water Containment
+    -written in elvish
+    -requires a spell slot lvl 7 to use
+    -can be cast as a ritual (10m)
+    -concentration indefinite.
+    -Requires to be casted from an establish magic circle, created or prexisting
+    -Description:
+        This scroll is attuned to the Ash Mount of [Kunark], when used, ash and sludge mixed in the water will be contained from spreading further into waters based on the distance from the caster to the Ash Mount.
