--- a/OneWiki/data/Corellon.wiki
+++ b/OneWiki/data/Corellon.wiki
@@ -4,3 +4,8 @@ God of magic and the arts (pg 10 of DM handbook)
 Chaotic Good
 Oversees [Nowa Huta]
 Symbol: eight pointed star
+
+When Released:
+    -by the Tree of Corellon being burned down:
+        -will assume rulership of the island and open a way to the [Feywild] for the island's inhabitants
+        
