--- a/OneWiki/data/Erathis.wiki
+++ b/OneWiki/data/Erathis.wiki
@@ -4,3 +4,9 @@ God of civilization and invention (pg 10 of DM handbook)
 Lawful Neutral
 Oversees [Ak'anon]
 Symbol: Upper half of a clockwork gear
+
+Erathis fuels the industry and inginuity of Ak'anon, burying himself beneath the stone to forever power their mighty furnaces.
+
+When Released:
+    -By the city of Ak'anon falling or being abandoned:
+        -Will create a new craft for the world to practice that will be particularly effective against the offenders.
