--- a/OneWiki/data/Kord.wiki
+++ b/OneWiki/data/Kord.wiki
@@ -4,3 +4,7 @@ God of strength and storms (pg 10 of DM handbook)
 Chaotic Neutral
 Oversees [Arabasta]
 Symbol: Sword with a lightning bolt cross guard
+
+When Released:
+    -by his stone being crushed:
+        -Challenges the being that released him from his orb in a fight to the death. Then seeks out other strong beings and creatures if successful.
