--- a/OneWiki/data/Vecna.wiki
+++ b/OneWiki/data/Vecna.wiki
@@ -4,3 +4,7 @@ God of evil secrets
 Stays in her plane of existence by the appeasement of the [Crones of Neriak] and respectfully empowers them.
 Oversees [Neriak]
 Symbol: Partially shattered one-eyed skull
+
+When Released:
+    -by slaying the [Crones of Neriak]:
+        -will being doing devious things from the shadows to torment mortals and gather souls.
