--- a/OneWiki/data/Venril Sathir.wiki
+++ b/OneWiki/data/Venril Sathir.wiki
@@ -8,7 +8,7 @@ etherium existence to both extend his own life as well as power the seal.
 STR 20, DEX 20, CON 20, WIS 20, INT 20, CHA 18      SPELL SAVE DC   SPELL CAST ABILITY    SPELL ATTACK BONUS 
     +5      +5      +5      +5      +5      +4                 20                  +12                   +11
 
-290hp
+300hp
 AC 18+3 God King's Platemail (req str 18)
 Ring of Spell Storing x5 (one spell each) (pg 192 DM handbook)
 Ring of Telekinesis (pg 280 player handbook)
@@ -32,8 +32,8 @@ Ethereal presence, can interact with spirits as if they were material.
 -if a creature is grappled, he can roll to hit again, if successful, the soul of the creature is pulled from it's body.
 
 Legendary Actions (3):
-    -Dispell Magic as a reaction
-    -Telekinesis as a reaction
+    -Dispell Magic as a reaction (pg 234)
+    -Telekinesis as a reaction (pg 280)
 
 Akumafruit:
 Etherium element
