--- a/OneWiki/data/Gruumsh.wiki
+++ b/OneWiki/data/Gruumsh.wiki
@@ -4,3 +4,7 @@ God of destruction, currently sealed under a mountain near [Luthadel], causing a
 Held at bay by the god-emporer of Luthadel
 Oversees [Kunark]
 Symbol: Triangular Eye with bony protrusions
+
+When Released:
+    -by [Venril Sathir] being slain:
+        -Opens a portal for his orcish creations to conquor to the world.
