--- a/OneWiki/data/Tharizdun.wiki
+++ b/OneWiki/data/Tharizdun.wiki
@@ -5,3 +5,7 @@ God of Madness, known in the legend of Regdar for causing calamity for [Fiore]
 Chaotic Evil
 Oversees [Fiore]
 Symbol: Jagged counter-clockwise spiral
+
+When Released:
+    -by being re-assmbled over a night:
+        -leaves and begins augmenting the world to be more "amusing", IE more AkumaFruits
