--- a/OneWiki/data/Tiamat.wiki
+++ b/OneWiki/data/Tiamat.wiki
@@ -11,3 +11,7 @@ Dragons were banished from the world by fusing them into one, and buried deep be
 
 https://ii.yuki.la/e/d5/cb25ff3123d78f35f2bb62e9b866fc33338a6a5ece06c84d6e585e8682111d5e.png
 (or see local saved image for stats)
+
+When Released:
+    -by destroying the elvish mummies and waking her from her sleep.
+        -destructively leaves it's cave where it is sealed to pursue [Bahamut] and all who would worship or live to promote him.
