--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -205,7 +205,7 @@ Quinn picks up griffon arrows from Yanny
 
 Shay and Quinn go to Rimardo's to return the book.
 
-Quinn borrows [Elvish Ranger Book]
+Quinn borrows [To Kill a Mocking Kenku]
 
 Sails to [Augsburg], Tessa pays 2s for 2 days of docking fee.
 -go to the marine outpost for pirate news
