--- a/OneWiki/data/Order of Steel.wiki
+++ b/OneWiki/data/Order of Steel.wiki
@@ -7,7 +7,7 @@ The order of steel has been responsible for the work that creates [Steel Inquisi
 
 Lead by [Head Bishop Skarjun]
 
-Bother members (Cult Fanatic pg 345)
+Brother Members (Cult Fanatic pg 345)
  -to hit +6
  -often cast a +2 AC Shield of Faith spell on nearby Steel Inquisitors
  -or inflict wounds spell in melee combat
