--- a/OneWiki/data/Books.wiki
+++ b/OneWiki/data/Books.wiki
@@ -6,5 +6,5 @@
 [The Resignation of Kord]
 [Foresake the Gods]
 [Roc Training Notebook]
-
-{Elvish Ranger Book]
+[To Kill a Mocking Kenku]
+[Way of the Woad]
