--- a/OneWiki/data/Venril Sathir.wiki
+++ b/OneWiki/data/Venril Sathir.wiki
@@ -14,7 +14,7 @@ Ring of Spell Storing x5 (one spell each) (pg 192 DM handbook)
 Ring of Telekinesis (pg 280 player handbook)
 Ring of Regeneration (pg 191 DM handbook) +1d6 HP per 10 minutes, body parts can regrow after a few days
 Ring of Jumping
-Rapier 1d8+5(+11 to hit)
+Four Rapiers 1d8+5(+11 to hit)
 
 Actions: 3 per round
 Bonus Actions: 2 per round
@@ -34,6 +34,7 @@ Ethereal presence, can interact with spirits as if they were material.
 Legendary Actions (3):
     -Dispell Magic as a reaction (pg 234)
     -Telekinesis as a reaction (pg 280)
+    -Manipulate Etherium: move a piece of nearby Etherium in the way to block a projectile
 
 Akumafruit:
 Etherium element
@@ -43,3 +44,4 @@ Etherium element
         Cold, Fire, Lightning, Thunder
     Damage Vulnerable:
         Necrotic, Psychic, Radiant, Force
+    Can form extra limbs and add an additional melee combat action.    
