--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -11,8 +11,8 @@ XXXXXXX XXXXXXX
 XXXXXXX XX|XXXXX       taxes of 3 helms deep
 
 XXXXXXX XXXXXXX
-XXXXXXX XXX
-XXXXXXX
+XXXXXXX XXXXXXX
+XXXXXXX X
 XXXXXXX
 
 250g given to Shirrong for doing an etherium inlay, silvering and Maliabilis enchantment to Grogar's Carpenter's Sharktooth Quarterstaff
@@ -381,3 +381,20 @@ group hunted down some more bulettes
 -slew a group of 7 bullettes
 
 The group rests at the elven ruin again for the night
+
+++++Session 26
+The murders at [Dun Morhen] were done 13 days ago.
+
+8 "boulders" found at a pond
+2 Ghaled Dhur, 3 Slimes
+
+head back to the ruins to collect the corpses of Feronia Vie, Nifle Vanhivener, and Martin Terratio
+
+the group slew 3 of the [Don Kreig] men they had on board, and threw 2 into the brig
+
+sailing back to [3 Helms Deep] from [Dun Morhen] (4 days)
+
+Feronia Vie, Nifle, Martin were spoken to after death
+
+The group makes it back to the East dock of [Fiore]
+
