--- a/OneWiki/data/Redbeard The Unlucky.wiki
+++ b/OneWiki/data/Redbeard The Unlucky.wiki
@@ -1,5 +1,8 @@
 ﻿++ Redbeard The Unlucky
 
+Originally known as "Henry Smith"
+-used to be a dock worker
+
 An unfortunate pirate who ate the Unlucky Akuma fruit, that causes all 20 rolls around him to be rolled with disadvantage.
 Initially found at the Augsburg Crying Clam Inn/bar drinking away his unfortunate woes.
 
