--- a/OneWiki/data/Norrath.wiki
+++ b/OneWiki/data/Norrath.wiki
@@ -4,9 +4,8 @@ A diverse country currently dominated by the Iksar, with a capital of [Luthadel]
 
 General Lore:
 Norrath used to be a land of warring nations, Kunark, Fadwer. Encouraged by [Gruumsh]. 
-Thousands of years ago, [Venril Sathir] consumed the Etherium fruit and with combined magical tools, was able to seal Gruumsh as well as
-lead his people to conquor all of Norrath and maintain "peace". 
+Thousands of years ago, [Venril Sathir] consumed the Etherium fruit and with combined magical tools, was able to seal Gruumsh as well as lead his people to conquor all of Norrath and maintain "peace". 
 
 The mountain in which Gruumsh was sealed became an Ash Mount, which has since created a sunless sky, ash rains, polluted waters and nightly mist-fogs. 
 
-A barbaric and highly aggressive race called Koloss has also risen over the centuries on Kunark.
+A barbaric and highly aggressive race called [Koloss] has also risen over the centuries on Kunark.
