--- a/OneWiki/data/Evil Group Notes.wiki
+++ b/OneWiki/data/Evil Group Notes.wiki
@@ -12,7 +12,7 @@ XXXXXXX XX|XXXXX       taxes of 3 helms deep
 
 XXXXXXX XXXXXXX
 XXXXXXX XXXXXXX
-XXXXXXX X
+XXXXXXX XXX
 XXXXXXX
 
 250g given to Shirrong for doing an etherium inlay, silvering and Maliabilis enchantment to Grogar's Carpenter's Sharktooth Quarterstaff
@@ -22,6 +22,9 @@ XXXXXXX
 -11 days - 9 days crafting - 2 days enchanting
 
 Griffon eggs hatch in 15 days - incubates by Brundy the fire beetle
+
+Carpenter's Oak Longbow x2, 100g, 4 days - one done
+XX
 
 ++++Evil Session 2 Notes:
 The crew had supplied food to tide over the refugee camp for a few days before they persuaded the [Marines] to let them join along when they departed.
@@ -398,3 +401,20 @@ Feronia Vie, Nifle, Martin were spoken to after death
 
 The group makes it back to the East dock of [Fiore]
 
+++++Session 27
+Grogar getting Shark Bite, will pay 10g upon pick up from Grix - to be complete in 1 day
+
+Carpenter's Oak Longbow x2 for Croaker & Friend, 100g, 4 days
+ +1dmg +50ft max range
+
+Croaker and Kreiger stage an encounter at the North Dock to fool Edan. Posing as Steel Inquisitors.
+-Vulcan reveals the trick
+
+Edan fully charges radiant by draining trees at the North Dock
+-expells it on a zombie, cracks the Radiant Hilt. 
+
+4 days to [Dun Morhen]
+-adventured into the [Wyverns Lair]
+-slew 5 Owl Bears
+-slew 2 of the 8 Wyverns
+-NEED TO GIVE EXP FOR THESE
