--- a/OneWiki/data/Regdars Radiant Hilt.wiki
+++ b/OneWiki/data/Regdars Radiant Hilt.wiki
@@ -20,3 +20,4 @@ ADDITIONAL: lvl 5 slot (or equivalent), -40 Max HP, -2 CON
  +16 dmg Radiant damage, +3 TH, gives off light when wielded, any existing blade melts away
  (can sap a permenant 1 CON from a creature for +5 DMG on next hit, stack up to 20 times, 10 minute ritual)
  hilt is destroyed along with user if used a maximum capacity.
+ 25ft pushback, characters within 60ft make a DC 16 save or be blinded. 
