adding more content to wyvern lair and notes for group threes next session

--- a/OneWiki/data/Asmodeus.wiki
+++ b/OneWiki/data/Asmodeus.wiki
@@ -3,3 +3,7 @@
 God of Tyranny
 Oversees [Dun Morhen]
 Symbol: Three triangles in a tight formation
+
+one of the earliest gods to be banished, by the other gods due to attacking areas that did not belong to himself, and being placed between other greater powers like the conflict between Bahamut and Tiamat.
+
+His Portal on [Dun Morhen] was purged of it's magical power, trapping Asmodeus in Nessus of the Nine Hells
