--- a/OneWiki/data/Group Three Notes.wiki
+++ b/OneWiki/data/Group Three Notes.wiki
@@ -239,6 +239,36 @@ The group is defeated by the Bandits of Deception,
 -The corpses of Shay and Whap are used as bait for sharks
 -all weapons/shields/arcane focuses/currency have been looted by the [Bandits of Deception]
 
+++++Session 10
+The session's beginning will focus on [Plosive] and [Kyra]
 
+Items sold at [Gorda]
+[Leeran] at the Sages Cellar
+    -[Legend of Regdar] -5g
+    -[The Resignation of Kord] -5g
+    -[Foresake the Gods] -30g
+    -Arcane Focus -10g
+    -Obsidian Shard - 3g
+    -potions 20g
+    (73g total)
+    
+Then later that day, they put on a "Sale", selling:
+    -Great Axe 30g
+    -Battle Axe 10g
+    -Shield x2 10g each 
+    -Quarter Staff 1g
+    -daggers x3 2g each
+    -Rapier 25g
+    -Short Sword x2 10g each
+    -Farshot Longbow +1 TH, 70g 
+    -Arrows x240 1g per 20
+    -silver arrows x20 - 100g (5g per arrow)
+    -griffon arrows (+1 TH) x94 - 50g per 20
+    
+items will have been sold (or stolen) on a 4+ if the group tries to get them later
+-they can be purchased by the new members if the item is still present (on a 8+)
 
-
+After a while, [Quinn] and [Tessa] will be brought top-side to be sold
+-Able bodied Quinn - 100g
+-The Warlock Tessa - 150g
+(if not sold, they will be put into the [Gorda] fighter's tournament to prove their value.) 
