--- a/OneWiki/data/Players.wiki
+++ b/OneWiki/data/Players.wiki
@@ -17,7 +17,9 @@
   
 [Group Three Notes]
   [Serana]
-  [Whap]
+  [Whap] DEAD
   [Quinn]  
-  [Shay]
+  [Shay] DEAD
   [Tessa]
+  [Plosive]
+  [Kyra]
